fix horizontal overflow issues on mobile

--- a/page.css
+++ b/page.css
@@ -8,6 +8,7 @@
 }
 
 html {
+  overflow-x: hidden;
   width: 100%;
   height: auto;
   min-height: 100%;
@@ -16,6 +17,8 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+  width: 100%;
   font-size: small;
   height: inherit;
   background-color: var(--bg-color);
